# actionplugin-addons

./: .gitignore  .gitmodules  README.md
ExploringRobot/: Makefile.am
ExploringRobot/examples/: gmon.out  robotWithExtAction.hex
ExploringRobot/include/: Makefile.am  RobotActionPlugin.h
ExploringRobot/src/: RobotActionPlugin.cpp
KBModActionAddon/trunk/: ChangeLog  NEWS  README  TODO  aclocal.m4  configure.ac  doxygen.cfg  libtool
KBModActionAddon/trunk/autom4te.cache/: output.0  requests  traces.1
KBModActionAddon/trunk/examples/tests/: disconnected
KBModActionAddon/trunk/include/: AssertAtom.h  ExecuteAtom.h  KBModActionAddon.h  Makefile.am  RetractAtom.h
KBModActionAddon/trunk/src/: AssertAtom.cpp  ExecuteAtom.cpp  KBModActionAddon.cpp  Makefile.am  RetractAtom.cpp
KBModActionAddon/trunk/testsuite/: Makefile.am
KBModAddon/trunk/: AUTHORS  Makefile  NEWS  README  TODO  svn-commit.tmp
KBModAddon/trunk/KBModAddon/: ChangeLog  configure.ac  doxygen.cfg  knowledgebase
KBModAddon/trunk/KBModAddon/examples/tests/: example1  foaf.out  rdfplugin.test
KBModAddon/trunk/KBModAddon/include/: ExecuteAtom.h  KBModAddon.h  RetractAtom.h
KBModAddon/trunk/KBModAddon/src/: AssertAtom.cpp  ExecuteAtom.cpp  KBModAddon.cpp  Makefile.am  RetractAtom.cpp
KBModAddon/trunk/KBModAddon/src/.deps/: AssertAtom.Plo  ExecuteAtom.Plo  KBModAddon.Plo  KBModPlugin.Plo  ParserData.Plo  RDFAtom.Plo  RDFPlugin.Plo  ROBOTAtom.Plo  ROBOTPlugin.Plo  RetractAtom.Plo  SkolemAtom.Plo
KBModAddon/trunk/KBModAddon/testsuite/: Makefile.in  run-tests.sh
KBModAddon/trunk/autom4te.cache/: output.0  traces.0  traces.1
KBModAddon/trunk/examples/tests/: disconnected  example1
KBModAddon/trunk/include/: AssertAtom.h  Makefile.am  config.h  config.h.in
KBModAddon/trunk/src/: AssertAtom.cpp  ExecuteAtom.cpp  RetractAtom.cpp  svn-commit.tmp
KBModAddon/trunk/testsuite/: Makefile
Reversi/: Makefile.am  NEWS  README  configure.ac
Reversi/examples/: Info  facts.hex  guess_and_check.hex  strategy_border_pawns_and_walls.hex  strategy_corners_and_stable_pawns.hex  strategy_how_many_it_eats.hex
Reversi/include/: Makefile.am  PawnPlaced.h  Reversi.h
Reversi/js/: isMyTurn.js  makeMove.js
Reversi/pl/: Makefile.am  htmlReversiBoardDecripter.pl  htmlReversiGameFinished.pl  htmlReversiMyColorDecripter.pl  htmlReversiTable
Reversi/src/: Makefile.am  PawnPlaced.cpp  Reversi.cpp
Reversi/vs10/: Reversi.sln
Reversi/vs10/Reversi/: Reversi.vcxproj  Reversi.vcxproj.filters
Reversi/vs10/setup/: setup.vdproj
RobotActionAddon/trunk/: AUTHORS  ChangeLog  NEWS  README  TODO  configure.ac  libtool
RobotActionAddon/trunk/autom4te.cache/: output.0  traces.0  traces.1
RobotActionAddon/trunk/examples/tests/: example1
RobotActionAddon/trunk/include/: Makefile.am  ROBOTActionAddon.h  ROBOTAtom.h
RobotActionAddon/trunk/src/: Makefile.am  ROBOTActionAddon.cpp  ROBOTAtom.cpp
RobotActionAddon/trunk/testsuite/: Makefile.am
RobotAddon/trunk/: Makefile.am  NEWS  TODO  bootstrap.sh  configure.ac  libtool  svn-commit.tmp
RobotAddon/trunk/.fr-JkCVq5/Robot-AddonAtom/examples/: Makefile  Makefile.am  Makefile.in  PeopleShort.rdf  RecordsShort.rdf  axel-ex.hex  bnode1.ttl  bnode2.ttl  foaf.hex  nl-ex.hex  raptor.ttl  sr.hex  sr.ttl  test.ttl
RobotAddon/trunk/.fr-JkCVq5/Robot-AddonAtom/examples/tests/: axel-ex.out  sr.out
RobotAddon/trunk/.fr-JkCVq5/Robot-AddonAtom/testsuite/: Makefile
RobotAddon/trunk/autom4te.cache/: output.1  traces.0  traces.1
RobotAddon/trunk/include/: Makefile.am  ROBOTAtom.h  ROBOTPlugin.h  config.h  config.h.in
RobotAddon/trunk/src/: Makefile.am  ROBOTAtom.cpp  ROBOTPlugin.cpp
RobotAddon/trunk/src/.deps/: AddonAtom.Plo  ROBOTAtom.Plo  ROBOTPlugin.Plo
SearchRescueRobot/: AUTHORS
SearchRescueRobot/examples/: Makefile.am  example.hex  gmon.out  robotWithExtAction.hex
SearchRescueRobot/include/: RobotActionPlugin.h
SearchRescueRobot/src/: RobotActionPlugin.cpp
SmartRobot_2x/: NEWS  README  configure.ac
SmartRobot_2x/examples/: Logic1.hex  Logic2.hex  Logic3.hex  Logic4.hex  Logic4DetectionWalls.hex  Logic5.hex  Logic5DetectionWalls.hex  Maze1.hex  Maze2.hex  SimpleMaze.hex
SmartRobot_2x/include/: Makefile.am  SmartRobotActionPlugin.h
SmartRobot_2x/src/: Makefile.am  SmartRobotActionPlugin.cpp
Sudoku_2x/: AUTHORS  NEWS  README  configure.ac
Sudoku_2x/examples/: example.hex  example2.hex  example3.hex
Sudoku_2x/examples/DeterministicSudokuSolver/: Det0encoding.hex  Det1encoding.hex  facts16x16  facts25x25  facts36x36  facts49x49  facts64x64  facts81x81
Sudoku_2x/examples/NonDeterministicStrategies/: SudokuGuessClasp  SudokuGuessDLV.dlv
Sudoku_2x/include/: Makefile.am  SudokuPlugin.h
Sudoku_2x/src/: Makefile.am  SudokuPlugin.cpp
Sudoku_2x/testsuite/: Makefile.am
gcalActionAddon/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  libtool
gcalActionAddon/trunk/autom4te.cache/: output.1  requests  traces.0  traces.1
gcalActionAddon/trunk/examples/tests/: example_group_meeting
gcalActionAddon/trunk/include/: CreateEventAtom.h  GoogleCalendarActionAddon.h  Makefile.am
gcalActionAddon/trunk/src/: CreateEventAtom.cpp  GoogleCalendarActionAddon.cpp  Makefile.am  calendarApp.java
gcalAddon/trunk/: Makefile  configure.ac  libtool
gcalAddon/trunk/autom4te.cache/: output.0  requests  traces.1
gcalAddon/trunk/examples/tests/: example_group_meeting  example_simple
gcalAddon/trunk/include/: CreateEventAtom.h  GoogleCalendarAddon.h  Makefile.am  config.h
gcalAddon/trunk/src/: CreateEventAtom.cpp  GoogleCalendarAddon.cpp  Makefile.am
kbmod/: NEWS  README  configure.ac
kbmod/examples/tests/: example1
kbmod/include/: KBModActionPlugin.h  Makefile.am
kbmod/src/: AssertAtom.cpp  ExecuteAtom.cpp  KBModActionPlugin.cpp  Makefile.am  RetractAtom.cpp
robot/: NEWS  README  configure.ac
robot/examples/: .directory  robotWithExtAction.hex
robot/include/: RobotActionPlugin.h
robot/src/: Makefile.am  RobotActionPlugin.cpp
